Add links to the forms

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>We would like to recognize and highlight the efforts of our
         compatriots. Every time they do something good for their hosts.</p>
       <h2>What can I do now?</h2>
-      <p>Help us collect the ideas about how can we give back</p>
+      <p><a href="https://forms.gle/wASPdjqixXboKQEY6">Fill the form</a> and help us collect the ideas about how can we give back.</p>
     </div>
     <div class="page contributor">
       <p>The world gave us a lot of support and we try to be a good citizens
@@ -26,7 +26,7 @@
       Our supporters donate to the Ukrainian funds, every time we do good
       things.
       <h2>What can I do now?</h2>
-      <p>Help us by sharing your way to give back to your local community.
+      <p><a href="https://forms.gle/obUDmft2yrbJifwR9">Fill the form</a> and help us by sharing your way to give back to your local community.
     </div>
     <script>
       function OpenPage(nextCurrent) {
