--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ukraine gives hack</title>
+    <title>Ukraine gives back</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/f6ac97263e.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
